--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@phosphor-icons/react": "^2.1.7",
     "@radix-ui/react-icons": "^1.3.1",
     "@react-aria/optimize-locales-plugin": "^1.1.2",
     "next": "15.0.2",
